tests/static/pass/internal/3.0.c
int f(void) { return 0; }

int main(void) {
      extern int f(void);
      return f();
}
