tests/static/fail/fundecls/1.0.c
typedef int f(void);

const f g;

int main(void) {
      return 0;
}
